fixed alignment of logo in nav

--- a/style.css
+++ b/style.css
@@ -29,9 +29,11 @@ nav {
 }
 
 .logo {
+  display: flex;
+  align-items: center;
   margin-left: 20px;
+  height: 100%;
   position: absolute;
-  top: 25%;
   filter: drop-shadow(0px 0px 20px #15ffee);
 }
 
